Consistency for server SDKs

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1267,6 +1267,8 @@ client
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 
 val client = Client()
+
+client
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
     .setProject("5df5acd0d48c2")                // Your project ID
     .setJWT("eyJ9.eyJ...")                      // Your secret JSON Web Token</code></pre>
@@ -1278,6 +1280,8 @@ val client = Client()
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 
 let client = Client()
+
+client
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
     .setProject("5df5acd0d48c2")                // Your project ID
     .setJWT("eyJ9.eyJ...")                      // Your secret JSON Web Token</code></pre>
