Consistent use of JWT for response

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1149,7 +1149,7 @@ val client = Client(context)
 
 val account = Account(client)
 
-val response = account.createJWT()</code></pre>
+val jwt = account.createJWT()</code></pre>
     </li>
     <li>
         <h3>Apple</h3>
