force post for graphql

--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -347,7 +347,7 @@ if (!\function_exists('skipLanguage')) {
                     <div>
                         <div class="route margin-bottom">
                             <?php if($sdk === "graphql-default"): ?>
-                                <span class="method <?php echo $this->escape($method); ?>"><?php echo strtoupper($this->escape($method)); ?></span><span class="endpoint"></span><span class="path">/v1/graphql</span>
+                                <span class="method post">POST</span><span class="endpoint"></span><span class="path">/v1/graphql</span>
                             <?php else: ?>
                                 <span class="method <?php echo $this->escape($method); ?>"><?php echo strtoupper($this->escape($method)); ?></span><span class="endpoint"></span><span class="path">/v1<?php echo $this->escape($url); ?></span>
                             <?php endif; ?>
