--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -311,6 +311,47 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
     Phone authentication requires you to set up an SMS provider to send SMS messages. You will need to configure these <a href="/docs/environment-variables#phone">environment variables</a> and restart your Appwrite containers before you can use phone authentication.
 </p>
 
+<p> 
+    Appwrite supports the following SMS Providers:
+</p>
+
+<table class="full">
+    <thead>
+    <tr>
+        <td style="width: 80px">Provider</td>
+        <td style="width: 120px">_APP_SMS_PROVIDER</td>
+        <td>_APP_SMS_FROM</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Twilio</td>
+        <td><code>sms://[Account SID]:[Auth Token]@twilio</code></td>
+        <td><code>[TWILIO PHONE NUMBER]</code></td>
+    </tr>
+    <tr>
+        <td>TextMagic</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>TeleSign</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>MSG91</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Vonage</td>
+        <td></td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
+
 <p>
     The example below shows you how to initiate a phone authentication request.
 </p>
