Fix alignment and formatting of table where possible

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -320,7 +320,7 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
     <tr>
         <td style="width: 80px">Provider</td>
         <td>_APP_SMS_PROVIDER</td>
-        <td>_APP_SMS_FROM</td>
+        <td style="width: 250px">_APP_SMS_FROM</td>
     </tr>
     </thead>
     <tbody>
@@ -332,7 +332,7 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
     <tr>
         <td>TextMagic</td>
         <td><code>sms://[USERNAME]:[API KEY]@text-magic</code></td>
-        <td><code>[TEXT MAGIC PHONE NUMBER OR SENDER ID]</code></td>
+        <td><code>[PHONE NUMBER OR SENDER ID]</code></td>
     </tr>
     <tr>
         <td>TeleSign</td>
@@ -347,7 +347,7 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
     <tr>
         <td>Vonage</td>
         <td><code>sms://[API KEY]:[API SECRET]@vonage</code></td>
-        <td><code>[VONAGE PHONE NUMBER OR BRAND NAME]</code></td>
+        <td><code>[PHONE NUMBER OR BRAND NAME]</code></td>
     </tr>
     </tbody>
 </table>
