Change / to # for sub sections

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -153,18 +153,18 @@ brew install --HEAD appwrite</code></pre>
         </tr>
         <tr>
             <td>functions</td>
-            <td>Array of <a href="/docs/command-line/function-options">functions</a></td>
+            <td>Array of <a href="/docs/command-line#/function-options">functions</a></td>
             <td>Configuration of functions in your project.</td>
         </tr>
         <tr>
             <td>collections</td>
-            <td>Array of <a href="/docs/command-line/collection-options">collections</a></td>
+            <td>Array of <a href="/docs/command-line#collection-options">collections</a></td>
             <td>Configuration of collections in your project.</td>
         </tr>
     </tbody>
 </table>
 
-<h4><a href="/docs/config/function-options" id="function-options">Function Options</a></h4>
+<h4><a href="/docs/command-line#function-options" id="function-options">Function Options</a></h4>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
@@ -232,7 +232,7 @@ brew install --HEAD appwrite</code></pre>
     </tbody>
 </table>
 
-<h4><a href="/docs/command-line/collection-options" id="collection-options">Collections</a></h4>
+<h4><a href="/docs/command-line#collection-options" id="collection-options">Collections</a></h4>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
