--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -131,7 +131,7 @@ brew install --HEAD appwrite</code></pre>
   <li class="margin-bottom-small">Helps you deploy your Appwrite project to production and more</li>
 </ol>
 
-<h3><a href="/docs/command-line/configurable-options" id="configurable-options">Configurable Options</a></h3>
+<h3><a href="/docs/command-line#configurable-options" id="configurable-options">Configurable Options</a></h3>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
@@ -153,7 +153,7 @@ brew install --HEAD appwrite</code></pre>
         </tr>
         <tr>
             <td>functions</td>
-            <td>Array of <a href="/docs/command-line#/function-options">functions</a></td>
+            <td>Array of <a href="/docs/command-line#function-options">functions</a></td>
             <td>Configuration of functions in your project.</td>
         </tr>
         <tr>
