Add page for sms-delivery

--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -33,7 +33,7 @@ _APP_SYSTEM_EMAIL_ADDRESS=YOUR-SENDER-EMAIL</code></pre>
 
 <h2><a href="/docs/email-delivery#restartServer" id="restartServer">Restart Your Appwrite Server</a></h2>
 
-<p>Once you've updated your .env file, you need to restart your Appwrite stack using the following command from your terminal:</p>
+<p>Once you've updated your .env file, you need to restart your Appwrite instance. Navigate to the directory containing the <code>docker-compose.yml</code> file of your Appwrite instance and run the following command from your terminal:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d</code></pre>
