Add logos to make providers section look pretty

--- a/app/views/docs/sms-delivery.phtml
+++ b/app/views/docs/sms-delivery.phtml
@@ -5,48 +5,70 @@
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
     <thead>
         <tr>
-            <th style="width: 180px">Provider</th>
+            <th style="width: 60px"></th>
+            <th style="width: 120px">SMS Provider</th>
             <th style="width: 120px"></th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>
+                <img src="/images-ee/docs/sms-delivery/twilio/logo-light.png" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/docs/sms-delivery/twilio/logo-dark.png" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+            </td>
+            <td>
                 Twilio
             </td>
             <td>
-                <a href="https://www.twilio.com/docs/smshttps://www.twilio.com/docs/sms/tutorials/how-to-send-sms-messages-node-js
+                <a href="https://www.twilio.com" target="_blank" rel="noopener">Website</a>
+            </td>
         </tr>        
         <tr>
+            <td>
+                <img src="/images-ee/docs/sms-delivery/text-magic/logo-common.png" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/docs/sms-delivery/text-magic/logo-common.png" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+            </td>
             <td>
                 TextMagic
             </td>
             <td>
-                <a href="https://www.textmagic.com/docs/api/start/#How-to-obtain-the-API-credentials" target="_blank" rel="noopener">Documentation</a>
+                <a href="https://www.textmagic.com" target="_blank" rel="noopener">Website</a>
             </td>
         </tr>
         <tr>
+            <td>
+                <img src="/images-ee/docs/sms-delivery/telesign/logo-light.png" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/docs/sms-delivery/telesign/logo-dark.png" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+            </td>
             <td>
                 Telesign
             </td>
             <td>
-                <a href="https://support.telesign.com/s/article/Find-Customer-ID-and-API-Key" target="_blank" rel="noopener">Documentation</a>
+                <a href="https://www.telesign.com" target="_blank" rel="noopener">Website</a>
             </td>
         </tr>
         <tr>
+            <td>
+                <img src="/images-ee/docs/sms-delivery/msg91/logo-common.png" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/docs/sms-delivery/msg91/logo-common.png" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+            </td>
             <td>
                 MSG91
             </td>
             <td>
-                <a href="https://msg91.com/help/where-can-i-find-my-authentication-key" target="_blank" rel="noopener">Documentation</a>
+                <a href="https://msg91.com" target="_blank" rel="noopener">Website</a>
             </td>
         </tr>
         <tr>
             <td>
+                <img src="/images-ee/docs/sms-delivery/vonage/logo-light.png" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/docs/sms-delivery/vonage/logo-dark.png" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+            </td>
+            <td>
                 Vonage
             </td>
             <td>
-                <a href="https://developer.vonage.com/messaging/sms/code-snippets/send-an-sms" target="_blank" rel="noopener">Documentation</a>
+                <a href="https://www.vonage.ca/" target="_blank" rel="noopener">Website</a>
             </td>
         </tr>
     </tbody>
