--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -56,6 +56,14 @@
     </li>
 </ul>
 
+<p>You will be propted to configure the following during setup:</p>
+<ol class="margin-top margin-bottom-large text-size-normal">
+	<li>Your Appwrite instance's HTTP and HTTPs ports.</li>
+	<li>Your Appwrite instance's sercret key used to encrypt sensitive data.</li>
+    <li>Your Appwrite instance's hostname. Custom domains of projects created in this Appwrite instance must be a subdomain of this hostname.</li>
+    <li>Your Appwrite instance's DNS A record hostname. Typically set to the same value as your Appwrite instance's hostname.</li>
+</ol>
+
 <h2><a href="/docs/installation#one-click-setups" id="one-click-setups">One-Click Setups</a></h2>
 
 <p>
