--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -122,7 +122,7 @@ brew install --HEAD appwrite</code></pre>
 
 <p>An <code>appwrite.json</code> file is created by the CLI when you initialize your project. It stores all the configuration for the CLI to be able to interact with your Appwrite project in JSON format. When using the <code>appwrite deploy</code> command, the CLI uses information from <code>appwrite.json</code> to deploy your functions and collections.</p>
 
-<p>The <code>appwrite.json</code> file does the following things </p>
+<p>The <code>appwrite.json</code> file does the following things:</p>
 
 <ol class="margin-top margin-bottom-large">
   <li class="margin-bottom-small">Provides context to the CLI</li>
