--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -147,7 +147,7 @@ brew install --HEAD appwrite</code></pre>
             <td>ID of your Appwrite Project.</td>
         </tr>
         <tr>
-            <td><code>name</code></td>
+            <td><code>projectName</code></td>
             <td>string</td>
             <td>Name of your Appwrite Project.</td>
         </tr>
