--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -207,7 +207,7 @@ brew install --HEAD appwrite</code></pre>
         <tr>
             <td><code>execute</code></td>
             <td>Array of strings</td>
-            <td>Grants execute permissions to users. <a href="docs/rest#permissions">Learn more about permission strings</a>.</td>
+            <td>Grants execute permissions to users. <a href="docs/rest#permissions">Learn more about role strings</a>.</td>
         </tr>
         <tr>
             <td><code>events</code></td>
