--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -153,7 +153,7 @@ brew install --HEAD appwrite</code></pre>
         </tr>
         <tr>
             <td><code>functions</code></td>
-            <td>Array of <a href="/docs/command-line#function-options">functions</a></td>
+            <td>array of <a href="/docs/command-line#function-options">functions</a></td>
             <td>Configuration of functions in your project.</td>
         </tr>
         <tr>
