--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -439,7 +439,7 @@ appwrite client --debug // Prints your current configuration</code></pre>
 <div class="notice margin-bottom"> 
     <h3><a href="/docs/command-line#CIMode" id="CIMode">CI Mode</a></h3>
 
-    <p>The Appwrite CLI can also be used in a non-interactive mode. This is especially useful when you want to automate tasks on a CI Server. In order to enable CI mode on the CLI, you need to set your <b>project ID, endpoint and API Key</b> using</p>
+    <p>The Appwrite CLI can also be used in a non-interactive mode. This is especially useful when you want to automate tasks on a CI Server. In order to enable CI mode on the CLI, you need to set your <b>project ID, endpoint, and API Key</b> using</p>
 
     <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
         <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client \
