--- a/app/views/docs/webhooks.phtml
+++ b/app/views/docs/webhooks.phtml
@@ -150,7 +150,7 @@ let subscription = realtime.subscribe(channels: ["files"]) { message in
 </ul> -->
 
 <h2 id="events"><a href="/docs/events">Events</a></h2>
-Appwrite has events that fire when a resource changes. These events cover all Appwrite resources and can reflect create, update, and delete actions. You can specify one or many events to subscribe to with webhooks.
+<p>Appwrite has events that fire when a resource changes. These events cover all Appwrite resources and can reflect create, update, and delete actions. You can specify one or many events to subscribe to with webhooks.</p>
 <ul>
     <li class="margin-bottom"><a href="/docs/keys" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about events</a></li>
 </ul>
