--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -201,17 +201,17 @@ brew install --HEAD appwrite</code></pre>
         </tr>
         <tr>
             <td><code>ignore</code></td>
-            <td>Array of strings</td>
+            <td>array of strings</td>
             <td>Files to ignore inside the function. <a href="docs/functions#ignoreFiles">Learn more about ignoring files</a>.</td>
         </tr>
         <tr>
             <td><code>execute</code></td>
-            <td>Array of strings</td>
+            <td>array of strings</td>
             <td>Grants execute permissions to users. <a href="docs/rest#permissions">Learn more about role strings</a>.</td>
         </tr>
         <tr>
             <td><code>events</code></td>
-            <td>Array of strings</td>
+            <td>array of strings</td>
             <td>Events that trigger the function to execute. <a href="docs/events">Learn more about events</a>.</td>
         </tr>
         <tr>
