--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -269,17 +269,17 @@ brew install --HEAD appwrite</code></pre>
         </tr>
         <tr>
             <td><code>permissions</code></td>
-            <td>Array of strings</td>
+            <td>array of strings</td>
             <td>Grants access permissions to users at the collection level. <a href="docs/rest#permissions">Learn more about permissions</a>.</td>
         </tr>
         <tr>
             <td><code>attributes</code></td>
-            <td>Array of objects</td>
+            <td>array of objects</td>
             <td>Defines a list of attributes in the collection. <a href="docs/models/attributeList">Learn more about the Attributes List Object</a>.</td>
         </tr>
         <tr>
             <td><code>indexes</code></td>
-            <td>Array of objects</td>
+            <td>array of objects</td>
             <td>Defines a list of indexes in the collection. <a href="docs/models/indexList">Learn more about the Indexes List Object</a>.</td>
         </tr>
     </tbody>
