--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -60,7 +60,7 @@
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Your Appwrite instance's HTTP and HTTPs ports.</li>
     <li>Your Appwrite instance's sercret key used to encrypt sensitive data.</li>
-    <li>Your Appwrite instance's hostname. Custom domains of projects created in this Appwrite instance must be a subdomain of this hostname.</li>
+    <li>Your Appwrite instance's main hostname. Appwrite will generate a certificate using this hostname.</li>
     <li>Your Appwrite instance's DNS A record hostname. Typically set to the same value as your Appwrite instance's hostname.</li>
 </ol>
 
