--- a/app/views/docs/sms-delivery.phtml
+++ b/app/views/docs/sms-delivery.phtml
@@ -6,8 +6,9 @@
     <thead>
         <tr>
             <th style="width: 60px"></th>
-            <th style="width: 120px">SMS Provider</th>
-            <th style="width: 120px"></th>
+            <th>SMS Provider</th>
+            <th>Create Account</th>
+            <th>Get Credentials</th>
         </tr>
     </thead>
     <tbody>
@@ -22,6 +23,9 @@
             <td>
                 <a href="https://www.twilio.com" target="_blank" rel="noopener">Website</a>
             </td>
+            <td>
+                <a href="https://www.twilio.com/docs/iam/access-tokens#step-2-api-key" target="_blank" rel="noopener">Documentation</a>
+            </td>
         </tr>        
         <tr>
             <td>
@@ -33,6 +37,9 @@
             </td>
             <td>
                 <a href="https://www.textmagic.com" target="_blank" rel="noopener">Website</a>
+            </td>
+            <td>
+                <a href="https://www.textmagic.com/docs/api/start/#How-to-obtain-the-API-credentials" target="_blank" rel="noopener">Documentation</a>
             </td>
         </tr>
         <tr>
@@ -46,6 +53,9 @@
             <td>
                 <a href="https://www.telesign.com" target="_blank" rel="noopener">Website</a>
             </td>
+            <td>
+                <a href="https://support.telesign.com/s/article/Find-Customer-ID-and-API-Key" target="_blank" rel="noopener">Documentation</a>
+            </td>
         </tr>
         <tr>
             <td>
@@ -58,6 +68,9 @@
             <td>
                 <a href="https://msg91.com" target="_blank" rel="noopener">Website</a>
             </td>
+            <td>
+                <a href="https://msg91.com/help/where-can-i-find-my-authentication-key" target="_blank" rel="noopener">Documentation</a>
+            </td>
         </tr>
         <tr>
             <td>
@@ -69,6 +82,9 @@
             </td>
             <td>
                 <a href="https://www.vonage.ca/" target="_blank" rel="noopener">Website</a>
+            </td>
+            <td>
+                <a href="https://developer.vonage.com/en/account/secret-management" target="_blank" rel="noopener">Documentation</a>
             </td>
         </tr>
     </tbody>
