Remove non-standard ' character

--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -92,17 +92,15 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
     </div>
 
     <div class="margin-bottom-large">
-        <h2 class="margin-bottom">API References</h2>
+        <h2 class="margin-bottom">Explore APIs</h2>
         
         <p>The Appwrite API is organized around REST. Our API has predictable resource-oriented URLs, accepts form-encoded or JSON-encoded request bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.</p>
-
-        <p>Specifications for the Appwrite API are available in multiple formats, including Open API 3 for <a href="<?php echo $getSpecsUrl('open-api3', 'client'); ?>">clients</a> or <a href="<?php echo $getSpecsUrl('open-api3', 'server'); ?>">servers</a> and Swagger2 for <a href="<?php echo $getSpecsUrl('swagger2', 'client'); ?>">clients</a> or <a href="<?php echo $getSpecsUrl('swagger2', 'server'); ?>">servers</a>.</p>
     </div>
 
     <div class="margin-bottom-large">
         <h2 class="margin-bottom">Contributing</h2>
 
-        <p>Are you looking to get started contributing to Appwrite? Our <a href="https://github.com/appwrite/appwrite/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">contribution guide</a> has you covered. Want an SDK for a language we don’t yet support? Check out the <a href="https://github.com/appwrite/sdk-generator" target="_blank" rel="noopener">SDK generator</a> project. Also, have a look at our <a href="https://github.com/appwrite" target="_blank" rel="noopener">GitHub organization</a>.</p>
+        <p>Are you looking to get started contributing to Appwrite? Our <a href="https://github.com/appwrite/appwrite/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">contribution guide</a> has you covered. Want an SDK for a language we don 't yet support? Check out the <a href="https://github.com/appwrite/sdk-generator" target="_blank" rel="noopener">SDK generator</a> project. Also, have a look at our <a href="https://github.com/appwrite" target="_blank" rel="noopener">GitHub organization</a>.</p>
     </div>
 
     <div class="margin-bottom-large">
