Update landing page with updated explore APIs section

--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -93,8 +93,9 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
 
     <div class="margin-bottom-large">
         <h2 class="margin-bottom">Explore APIs</h2>
+        <p>You can integrate with Appwrite's APIs in many other flexible ways.</p>
         
-        <p>The Appwrite API is organized around REST. Our API has predictable resource-oriented URLs, accepts form-encoded or JSON-encoded request bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.</p>
+        <p>You can use Appwrite without an SDK by integrating directly with the <a href="/docs/rest">REST API</a>. Appwrite also provides a fully featured <a href="/docs/rest">GraphQL API</a> that you can access with or without an SDK. For handling real-time events, Appwrite provides a <a href="/docs/realtime">Realtime API</a> for client apps to subscribe to changes on your Appwrite project.</p>
     </div>
 
     <div class="margin-bottom-large">
